# CSI-240-Final

./: CMakeLists.txt  FileSorting.cpp  Make_New_Netwroks.cpp  Testing.cpp  fineTune.cpp  grid.cpp  grid.h  main.cpp  main.h  neural_network.cpp  neural_network.h  window.cpp  window.h
